# memil-python-env

./: .gitignore  AI_CATALOG.bat  README.md  README_WINPYTHON_DIRECT_SNIPPET.md  README_WINPYTHON_MIGRATION.md  README_WINPYTHON_SETUP_SNIPPET.md  SHARE_ENV_TO_AI.bat  Start.bat  WINPYTHON_SETUP.bat  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: setup_problem.md
app/: OPEN_GUI_PROTOTYPE.bat  README.md  app.js  index.html  style.css  tauri-plan.md
app/catalog/: actions.json  index.json  runner.json  setup.json  status.json
catalog/: catalog.json  index.json
catalog/templates/hello-python/: main.py  pyproject.toml
docs/: DESIGN.md  ENV_REPORT_GUIDE.md  GITHUB_OPERATION.md  ROOT_CLEANUP_GUIDE.md  WINPYTHON_BEGINNER_GUIDE.md  WINPYTHON_GUIDE.md  requirements-lab.txt
legacy/docs/: README.v1.backup.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tools/: bootstrap.ps1  check-winpython.ps1  common-winpython.ps1  export-env-report.ps1  first-setup.ps1  health-check.ps1  install-common-python.ps1  install-diffusers.ps1  install-ffmpeg.ps1  install-jupyter.ps1  install-lab-packages.ps1  install-sam.ps1  install-transformers.ps1  install-vscode.ps1  install-whisper.ps1  install-winpython-helper.ps1  install-yolo.ps1  run-sam-sample.ps1  setup-sam.ps1  winpython-guide.ps1
