[package]
name = "memil_catalog"
version = "0.3.0"
description = "MEMIL Python / AI Environment Catalog"
authors = ["MEMIL"]
edition = "2021"

[lib]
name = "memil_catalog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"